--- a/css/main.css
+++ b/css/main.css
@@ -21,34 +21,44 @@ article {
 }
 
 article header {
-
+  margin: 0 0 52px;
+  padding: 0 0 1rem;
+  border-bottom: 2px solid #555;
+  background: orange;
 }
 
 article h1 {
   font-size: 1.5rem;
   color: #222;
   margin-bottom: 0;
-  background-color: red;
+}
+
+article p {
+  font-style: normal;
+  margin: 0 0 52px;
+  background: limegreen;
 }
 
 article header p {
   font-style: italic;
-  margin-top: .1rem;
-  background-color: blue;
-}
-
-article p {
-
+  margin-top: 0;
+  margin-bottom: 52px;
+  background: pink;
 }
 
 article ol {
-
+  padding: 0 1rem;
+  font-weight: normal;
+  background: yellow;
 }
 
 blockquote {
-
+  font-size: 1.125rem;
+  color: #555;
+  padding: 1rem;
+  background: red;
 }
 
 .quote {
-
+  color: #999;
 }
