--- a/css/main.css
+++ b/css/main.css
@@ -2,61 +2,53 @@ html {
   box-sizing: border-box;
   font-family: "Crimson Text", serif;
   line-height: 1.3;
-  padding: 0 1rem;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  color: #222;
 }
 
 *, *::before, *::after {
   box-sizing: inherit;
 }
 
-/* font-family: "Crimson Text", serif; */
-
 body {
-  padding: 0;
   margin: 0;
 }
 
 article {
-  padding: 0;
+  margin: auto;
+  border-bottom: 1px solid #999;
 }
 
 article header {
-  margin: 0 0 52px;
-  padding: 0 0 1rem;
-  border-bottom: 2px solid #555;
-  background: orange;
+  margin: 0;
 }
 
 article h1 {
+  font-weight: normal;
   font-size: 1.5rem;
-  color: #222;
   margin-bottom: 0;
-}
-
-article p {
-  font-style: normal;
-  margin: 0 0 52px;
-  background: limegreen;
 }
 
 article header p {
   font-style: italic;
+  font-size: 1em;
   margin-top: 0;
-  margin-bottom: 52px;
-  background: pink;
+  margin-bottom: 2.5rem;
+}
+
+article p {
+  font-size: 1em;
 }
 
 article ol {
   padding: 0 1rem;
-  font-weight: normal;
-  background: yellow;
 }
 
 blockquote {
+  font-weight: normal;
   font-size: 1.125rem;
   color: #555;
-  padding: 1rem;
-  background: red;
 }
 
 .quote {
