--- a/css/main.css
+++ b/css/main.css
@@ -34,7 +34,9 @@ article header p {
   font-style: italic;
   font-size: 1em;
   margin-top: 0;
-  margin-bottom: 2.5rem;
+  margin-bottom: 1rem;
+  padding-bottom: 1.5rem;
+  border-bottom: 1px solid #999;
 }
 
 article p {
